feat(config): parameterize model index config (#19)
* feat: parameterize zentity index configuration

* docs: add example zentity.yml configuration